# da-google-tabs

./: .envrc  .gitignore  config.dhall  da-google-tabs.cabal  flake.nix
app/: Main.hs
src/: Donation.hs  Env.hs  Google.hs  Lib.hs
src/DA/: Auth.hs  REST.hs  WebSockets.hs
src/DA/WebSockets/: Types.hs
